# hcalc

./: .gitignore  ASCII.hs  Expression.hs  Help.hs  IEEE754.hs  IEEE754c.c  Interface.hs  Makefile  Parser.hs  PrettyPrint.hs  README.md  TODO.md  Version.hs  hcalc.cabal  hcalc.hs  hcalcTest.hs  package.yaml  release  stack.yaml  ucalc.hs  ucalcTest.hs
app/: hcalc.hs
doc/: hcalc.css  hcalcManual.md
src/: ASCII.hs  Expression.hs  Help.hs  IEEE754.hs  IEEE754c.c  Interface.hs  Parser.hs  PrettyPrint.hs  Version.hs  hcalc.hs  hcalcManual.lhs  hcalcManual.md  hcalcTest.hs
test/: hcalcTest.hs
