name:                hcalc
version:             1.0.5
synopsis:            Handy Calc is a simple yet powerful calculator.
description:         Handy Calc is a simple yet powerful calculator.
homepage:            https://github.com/CDSoft/hcalc#readme
license:             GPL-3
license-file:        LICENSE
author:              Christophe Delord
maintainer:          cdsoft.fr
copyright:           2016, 2017, 2018 Christophe Delord
category:            Calculator
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ASCII
                     , Expression
                     , Help
                     , IEEE754
                     , Interface
                     , Parser
                     , PrettyPrint
                     , Version
  c-sources:           src/IEEE754c.c
  build-depends:       base >= 4.7 && < 5
                     , here
                     , containers
  default-language:    Haskell2010

executable hcalc
  hs-source-dirs:      app
  main-is:             hcalc.hs
  ghc-options:         -O3 -Werror -Wall -fwarn-unused-do-bind
  build-depends:       base
                     , hcalc
                     , directory
                     , filepath
                     , unix
  default-language:    Haskell2010

test-suite hcalc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             hcalcTest.hs
  build-depends:       base
                     , hcalc
                     , containers
  ghc-options:         -Werror -Wall -fwarn-unused-do-bind
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/CDSoft/hcalc
